package ProxyPattern;

public abstract class Base{
    public abstract void method();
}
